Redesign Valley Cleaners site with modern visual system

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valley Cleaners | Chesterfield, MO Dry Cleaning</title>
+    <title>Valley Cleaners | Premium Garment Care in Chesterfield, MO</title>
     <meta
       name="description"
       content="Valley Cleaners is a family-run dry cleaner in Chesterfield, Missouri, offering high-quality dry cleaning, shirt laundry, and alterations since 1989."
@@ -17,23 +17,27 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="site-header">
+    <div class="bg-glow bg-glow-1"></div>
+    <div class="bg-glow bg-glow-2"></div>
+
+    <header class="site-header glass">
       <div class="container nav-wrap">
         <a class="brand" href="#">Valley Cleaners</a>
         <nav class="site-nav" aria-label="Primary">
           <a href="#services">Services</a>
-          <a href="#about">About</a>
+          <a href="#experience">Experience</a>
           <a href="#visit">Visit</a>
         </nav>
+        <a class="btn btn-nav" href="#visit">Book Pickup</a>
       </div>
     </header>
 
     <main>
-      <section class="hero">
+      <section class="hero section-tight">
         <div class="container hero-grid">
-          <div>
+          <div class="hero-copy fade-up">
             <p class="eyebrow">Trusted in Chesterfield since 1989</p>
-            <h1>High-quality garment care with a hometown touch.</h1>
+            <h1>Premium garment care, delivered with small-town warmth.</h1>
             <p class="lead">
               Family-run dry cleaner providing high-quality dry cleaning, shirt laundry,
               and alteration services for the Chesterfield community since 1989.
@@ -42,66 +46,119 @@
               <a class="btn btn-primary" href="#visit">Plan Your Visit</a>
               <a class="btn btn-secondary" href="tel:+16365550189">(636) 555-0189</a>
             </div>
+            <div class="metrics" aria-label="Company highlights">
+              <div>
+                <strong>35+</strong>
+                <span>Years serving Chesterfield</span>
+              </div>
+              <div>
+                <strong>1,000+</strong>
+                <span>Garments cared for weekly</span>
+              </div>
+              <div>
+                <strong>Family</strong>
+                <span>Owned and operated</span>
+              </div>
+            </div>
           </div>
-          <aside class="domain-card" aria-label="Recommended website domain">
-            <h2>Recommended Domain</h2>
-            <p class="domain-name">www.valleycleanerschesterfield.com</p>
-            <p>
-              A descriptive, SEO-friendly domain that clearly ties Valley Cleaners to
-              Chesterfield, Missouri.
-            </p>
-          </aside>
+
+          <div class="hero-visual fade-up">
+            <img
+              src="https://images.unsplash.com/photo-1616627981451-6f62f0f12f6a?auto=format&fit=crop&w=1400&q=80"
+              alt="Freshly pressed garments on a rack"
+              loading="lazy"
+            />
+            <aside class="domain-card glass" aria-label="Recommended website domain">
+              <h2>Domain Ready</h2>
+              <p class="domain-name">valleycleanerschesterfield.com</p>
+              <p>
+                Professional, location-focused domain for strong local trust and search
+                visibility.
+              </p>
+            </aside>
+          </div>
         </div>
       </section>
 
       <section id="services" class="section">
         <div class="container">
-          <h2>Our Services</h2>
+          <div class="section-heading">
+            <p class="eyebrow">Core Services</p>
+            <h2>Care tailored to how your clothes should feel.</h2>
+          </div>
           <div class="cards">
-            <article class="card">
-              <h3>Dry Cleaning</h3>
-              <p>
-                Professional cleaning and pressing for suits, dresses, uniforms, and
-                specialty fabrics.
-              </p>
+            <article class="card fade-up">
+              <img
+                src="https://images.unsplash.com/photo-1517677208171-0bc6725a3e60?auto=format&fit=crop&w=1200&q=80"
+                alt="Pressed business jacket"
+                loading="lazy"
+              />
+              <div class="card-body">
+                <h3>Dry Cleaning</h3>
+                <p>
+                  Precision cleaning and finishing for suits, dresses, uniforms, and premium
+                  fabrics.
+                </p>
+              </div>
             </article>
-            <article class="card">
-              <h3>Shirt Laundry</h3>
-              <p>
-                Crisp, neatly finished shirts with attention to collars, cuffs, and overall
-                presentation.
-              </p>
+            <article class="card fade-up">
+              <img
+                src="https://images.unsplash.com/photo-1617957743098-3f4c91be4d8b?auto=format&fit=crop&w=1200&q=80"
+                alt="Stack of freshly laundered shirts"
+                loading="lazy"
+              />
+              <div class="card-body">
+                <h3>Shirt Laundry</h3>
+                <p>
+                  Clean, crisp shirts with careful attention to collars, cuffs, and a polished
+                  finish.
+                </p>
+              </div>
             </article>
-            <article class="card">
-              <h3>Alterations</h3>
-              <p>
-                Reliable tailoring adjustments from hems to fit refinements, done by skilled
-                hands.
-              </p>
+            <article class="card fade-up">
+              <img
+                src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=1200&q=80"
+                alt="Tailor adjusting clothing"
+                loading="lazy"
+              />
+              <div class="card-body">
+                <h3>Alterations</h3>
+                <p>
+                  Expert tailoring from simple hems to fit refinements, done with exacting care.
+                </p>
+              </div>
             </article>
           </div>
         </div>
       </section>
 
-      <section id="about" class="section section-alt">
-        <div class="container narrow">
-          <h2>Why Chesterfield Families Choose Valley Cleaners</h2>
-          <p>
-            For more than three decades, Valley Cleaners has delivered dependable quality,
-            personal service, and care you can feel in every garment.
-          </p>
-          <ul class="highlights">
-            <li>Family-owned and operated</li>
-            <li>Serving Chesterfield, Missouri since 1989</li>
-            <li>Fast turnaround with careful quality checks</li>
-          </ul>
+      <section id="experience" class="section section-alt">
+        <div class="container experience-grid">
+          <div class="panel fade-up">
+            <p class="eyebrow">Why Valley Cleaners</p>
+            <h2>A cleaner that feels reliable from first visit to final pickup.</h2>
+            <ul class="highlights">
+              <li>Locally trusted, family-owned service since 1989</li>
+              <li>Consistent quality checks before every handoff</li>
+              <li>Friendly, transparent communication and turnaround</li>
+            </ul>
+          </div>
+          <div class="panel panel-dark fade-up">
+            <h3>Designed for busy households</h3>
+            <p>
+              Whether you need weekly shirt service or event-ready garments, we keep your routine
+              simple and your wardrobe sharp.
+            </p>
+            <a class="btn btn-light" href="#visit">Visit Us in Chesterfield</a>
+          </div>
         </div>
       </section>
 
-      <section id="visit" class="section">
-        <div class="container visit">
+      <section id="visit" class="section section-tight">
+        <div class="container visit glass fade-up">
           <div>
-            <h2>Visit Valley Cleaners</h2>
+            <p class="eyebrow">Visit Valley Cleaners</p>
+            <h2>Conveniently located in Chesterfield, Missouri.</h2>
             <p>
               123 Chesterfield Towne Center<br />
               Chesterfield, MO 63005
@@ -112,7 +169,7 @@
             </p>
           </div>
           <div class="contact-card">
-            <h3>Get in Touch</h3>
+            <h3>Contact</h3>
             <p><strong>Phone:</strong> <a href="tel:+16365550189">(636) 555-0189</a></p>
             <p>
               <strong>Email:</strong>
@@ -126,8 +183,9 @@
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <p>© <span id="year"></span> Valley Cleaners • Chesterfield, Missouri</p>
+      <div class="container footer-wrap">
+        <p>© <span id="year"></span> Valley Cleaners</p>
+        <p>Chesterfield, Missouri</p>
       </div>
     </footer>
 
