Refine design with factual copy and actionable buttons

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
           <a href="#services">Services</a>
           <a href="#experience">Experience</a>
           <a href="#visit">Visit</a>
+          <a href="#contact">Contact</a>
         </nav>
-        <a class="btn btn-nav" href="#visit">Book Pickup</a>
+        <a class="btn btn-nav" href="#contact">Get Started</a>
       </div>
     </header>
 
@@ -36,28 +37,28 @@
       <section class="hero section-tight">
         <div class="container hero-grid">
           <div class="hero-copy fade-up">
-            <p class="eyebrow">Trusted in Chesterfield since 1989</p>
-            <h1>Premium garment care, delivered with small-town warmth.</h1>
+            <p class="eyebrow">Serving Chesterfield since 1989</p>
+            <h1>High-quality garment care with trusted local service.</h1>
             <p class="lead">
               Family-run dry cleaner providing high-quality dry cleaning, shirt laundry,
               and alteration services for the Chesterfield community since 1989.
             </p>
             <div class="cta-row">
-              <a class="btn btn-primary" href="#visit">Plan Your Visit</a>
-              <a class="btn btn-secondary" href="tel:+16365550189">(636) 555-0189</a>
+              <a class="btn btn-primary" href="#services">Explore Services</a>
+              <a class="btn btn-secondary" href="#visit">Plan Your Visit</a>
             </div>
             <div class="metrics" aria-label="Company highlights">
               <div>
-                <strong>35+</strong>
-                <span>Years serving Chesterfield</span>
+                <strong>Since 1989</strong>
+                <span>Family-run local business</span>
               </div>
               <div>
-                <strong>1,000+</strong>
-                <span>Garments cared for weekly</span>
+                <strong>3 Core Services</strong>
+                <span>Dry cleaning, shirts, alterations</span>
               </div>
               <div>
-                <strong>Family</strong>
-                <span>Owned and operated</span>
+                <strong>Chesterfield, MO</strong>
+                <span>Proudly serving the local community</span>
               </div>
             </div>
           </div>
@@ -68,14 +69,6 @@
               alt="Freshly pressed garments on a rack"
               loading="lazy"
             />
-            <aside class="domain-card glass" aria-label="Recommended website domain">
-              <h2>Domain Ready</h2>
-              <p class="domain-name">valleycleanerschesterfield.com</p>
-              <p>
-                Professional, location-focused domain for strong local trust and search
-                visibility.
-              </p>
-            </aside>
           </div>
         </div>
       </section>
@@ -84,7 +77,7 @@
         <div class="container">
           <div class="section-heading">
             <p class="eyebrow">Core Services</p>
-            <h2>Care tailored to how your clothes should feel.</h2>
+            <h2>Professional care for the pieces you wear most.</h2>
           </div>
           <div class="cards">
             <article class="card fade-up">
@@ -99,6 +92,7 @@
                   Precision cleaning and finishing for suits, dresses, uniforms, and premium
                   fabrics.
                 </p>
+                <a class="btn btn-card" href="#contact">Request Service</a>
               </div>
             </article>
             <article class="card fade-up">
@@ -110,9 +104,9 @@
               <div class="card-body">
                 <h3>Shirt Laundry</h3>
                 <p>
-                  Clean, crisp shirts with careful attention to collars, cuffs, and a polished
-                  finish.
+                  Crisp, polished shirts with careful attention to collars, cuffs, and finish.
                 </p>
+                <a class="btn btn-card" href="#contact">Request Service</a>
               </div>
             </article>
             <article class="card fade-up">
@@ -124,8 +118,9 @@
               <div class="card-body">
                 <h3>Alterations</h3>
                 <p>
-                  Expert tailoring from simple hems to fit refinements, done with exacting care.
+                  Skilled adjustments and tailoring for better fit, comfort, and confidence.
                 </p>
+                <a class="btn btn-card" href="#contact">Request Service</a>
               </div>
             </article>
           </div>
@@ -136,20 +131,21 @@
         <div class="container experience-grid">
           <div class="panel fade-up">
             <p class="eyebrow">Why Valley Cleaners</p>
-            <h2>A cleaner that feels reliable from first visit to final pickup.</h2>
+            <h2>Built on consistency, quality, and neighborly service.</h2>
             <ul class="highlights">
-              <li>Locally trusted, family-owned service since 1989</li>
-              <li>Consistent quality checks before every handoff</li>
-              <li>Friendly, transparent communication and turnaround</li>
+              <li>Family-run and community-focused in Chesterfield, Missouri</li>
+              <li>Serving local customers since 1989</li>
+              <li>Focused service across dry cleaning, shirt laundry, and alterations</li>
             </ul>
+            <a class="btn btn-secondary" href="#contact">Contact Our Team</a>
           </div>
           <div class="panel panel-dark fade-up">
-            <h3>Designed for busy households</h3>
+            <h3>Simple, dependable garment care</h3>
             <p>
-              Whether you need weekly shirt service or event-ready garments, we keep your routine
-              simple and your wardrobe sharp.
+              Whether you need everyday shirt service or garment preparation for important events,
+              Valley Cleaners delivers reliable results with personal attention.
             </p>
-            <a class="btn btn-light" href="#visit">Visit Us in Chesterfield</a>
+            <a class="btn btn-light" href="#visit">Visit Valley Cleaners</a>
           </div>
         </div>
       </section>
@@ -158,25 +154,34 @@
         <div class="container visit glass fade-up">
           <div>
             <p class="eyebrow">Visit Valley Cleaners</p>
-            <h2>Conveniently located in Chesterfield, Missouri.</h2>
+            <h2>Serving the Chesterfield, Missouri community.</h2>
             <p>
-              123 Chesterfield Towne Center<br />
-              Chesterfield, MO 63005
+              Looking for dry cleaning, shirt laundry, or alterations in Chesterfield?
+              Stop by Valley Cleaners and our team will be happy to help.
             </p>
-            <p>
-              Monday–Friday: 7:00 AM – 6:30 PM<br />
-              Saturday: 8:00 AM – 3:00 PM
-            </p>
+            <div class="cta-row cta-row-tight">
+              <a class="btn btn-primary" href="#contact">Contact Us</a>
+              <a class="btn btn-secondary" href="#services">See Services</a>
+            </div>
           </div>
-          <div class="contact-card">
-            <h3>Contact</h3>
-            <p><strong>Phone:</strong> <a href="tel:+16365550189">(636) 555-0189</a></p>
-            <p>
-              <strong>Email:</strong>
-              <a href="mailto:hello@valleycleanerschesterfield.com"
-                >hello@valleycleanerschesterfield.com</a
-              >
-            </p>
+          <div id="contact" class="contact-card">
+            <h3>Contact Request</h3>
+            <p>Send us a quick message and we’ll follow up with service details.</p>
+            <form class="contact-form" action="#" method="post">
+              <label>
+                Name
+                <input type="text" name="name" required />
+              </label>
+              <label>
+                Email
+                <input type="email" name="email" required />
+              </label>
+              <label>
+                How can we help?
+                <textarea name="message" rows="4" required></textarea>
+              </label>
+              <button class="btn btn-primary" type="submit">Send Request</button>
+            </form>
           </div>
         </div>
       </section>
