Make previews consistent across Netlify and local

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
       name="description"
       content="Valley Cleaners is a family-run dry cleaner in Chesterfield, Missouri, offering high-quality dry cleaning, shirt laundry, and alterations since 1989."
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -65,7 +59,7 @@
 
           <div class="hero-visual fade-up">
             <img
-              src="https://images.unsplash.com/photo-1616627981451-6f62f0f12f6a?auto=format&fit=crop&w=1400&q=80"
+              src="assets/hero-garment-care.svg"
               alt="Freshly pressed garments on a rack"
               loading="lazy"
             />
@@ -82,7 +76,7 @@
           <div class="cards">
             <article class="card fade-up">
               <img
-                src="https://images.unsplash.com/photo-1517677208171-0bc6725a3e60?auto=format&fit=crop&w=1200&q=80"
+                src="assets/service-dry-cleaning.svg"
                 alt="Pressed business jacket"
                 loading="lazy"
               />
@@ -97,7 +91,7 @@
             </article>
             <article class="card fade-up">
               <img
-                src="https://images.unsplash.com/photo-1617957743098-3f4c91be4d8b?auto=format&fit=crop&w=1200&q=80"
+                src="assets/service-shirt-laundry.svg"
                 alt="Stack of freshly laundered shirts"
                 loading="lazy"
               />
@@ -111,7 +105,7 @@
             </article>
             <article class="card fade-up">
               <img
-                src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=1200&q=80"
+                src="assets/service-alterations.svg"
                 alt="Tailor adjusting clothing"
                 loading="lazy"
               />
